# snake_game_backend

./: .env  pyproject.toml  requirements.txt  start.sh
src/app/: main.py
src/models/: scoreboard.py
